feat: DORA Lead Time validation + release sync + UI redesign
Real Lead Time for Changes via GitLab releases with prod deployment
detection. Release sync attributes MRs to releases, skipped releases
re-attributed to nearest deployed tag. DORA page redesign with 4-column
grid, RatingPill, sparkline, trend arrow. Updated login, onboarding,
report, sync, and insights pages with new design tokens and layout.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>