@@ -6,9 +6,9 @@ import io.simakov.analytics.domain.model.MergeRequest;
 import io.simakov.analytics.domain.model.ReleaseTag;
 import io.simakov.analytics.domain.model.TrackedProject;
 import io.simakov.analytics.domain.model.enums.MrState;
-import io.simakov.analytics.domain.repository.LeadTimeSummaryProjection;
-import io.simakov.analytics.domain.repository.LeadTimeWeekProjection;
 import io.simakov.analytics.domain.repository.MergeRequestRepository;
+import io.simakov.analytics.domain.repository.RealLeadTimeSummaryProjection;
+import io.simakov.analytics.domain.repository.RealLeadTimeWeekProjection;
 import io.simakov.analytics.domain.repository.ReleaseTagRepository;
 import io.simakov.analytics.domain.repository.TrackedProjectRepository;
 import io.simakov.analytics.dora.model.DoraMetric;
@@ -57,8 +57,9 @@ public class DoraService {
     }
 
     /**
-     * Lead time summary + weekly chart data for given projects and days back.
-     * Returns map with keys: totalMrs, medianHours, p75Hours, p95Hours, chartJson.
+     * Реальный Lead Time for Changes: от создания MR до деплоя в прод через release_tag.
+     * Учитываются только MR с заполненным prod_deployed_at.
+     * Ключи возвращаемой map: totalMrs, medianDays, p75Days, p95Days, leadTimeRating, chartJson.
      */
     @Transactional(readOnly = true)
     public Map<String, Object> buildLeadTimeData(List<Long> projectIds,
@@ -66,28 +67,32 @@ public class DoraService {
         List<Long> resolvedIds = resolveProjectIds(projectIds);
         Instant dateFrom = DateTimeUtils.now().minus(days, ChronoUnit.DAYS);
 
-        List<LeadTimeSummaryProjection> summaryRows = mergeRequestRepository.findLeadTimeSummary(resolvedIds, dateFrom);
-        LeadTimeSummaryProjection summary = summaryRows.isEmpty()
+        List<RealLeadTimeSummaryProjection> summaryRows =
+            mergeRequestRepository.findRealLeadTimeSummary(resolvedIds, dateFrom);
+        RealLeadTimeSummaryProjection summary = summaryRows.isEmpty()
             ? null
             : summaryRows.getFirst();
-        List<LeadTimeWeekProjection> weekly = mergeRequestRepository.findLeadTimeByWeek(resolvedIds, dateFrom);
+        List<RealLeadTimeWeekProjection> weekly =
+            mergeRequestRepository.findRealLeadTimeByWeek(resolvedIds, dateFrom);
 
-        Double medianHours = summary != null ? round(summary.getMedianHours()) : null;
-        DoraRating prCycleTimeRating = DoraMetric.PR_CYCLE_TIME.computeRating(medianHours);
+        Double medianDays = summary != null && summary.getMedianDays() != null
+            ? round(summary.getMedianDays())
+            : null;
+        DoraRating leadTimeRating = DoraMetric.LEAD_TIME_FOR_CHANGES.computeRating(medianDays);
 
         Map<String, Object> result = new LinkedHashMap<>();
         result.put("totalMrs", summary != null
             ? summary.getMrCount().intValue()
             : 0);
-        result.put("medianHours", medianHours);
-        result.put("p75Hours", summary != null
-            ? round(summary.getP75Hours())
+        result.put("medianDays", medianDays);
+        result.put("p75Days", summary != null && summary.getP75Days() != null
+            ? round(summary.getP75Days())
             : null);
-        result.put("p95Hours", summary != null
-            ? round(summary.getP95Hours())
+        result.put("p95Days", summary != null && summary.getP95Days() != null
+            ? round(summary.getP95Days())
             : null);
-        result.put("prCycleTimeRating", prCycleTimeRating);
-        result.put("chartJson", buildChartJson(weekly));
+        result.put("leadTimeRating", leadTimeRating);
+        result.put("chartJson", buildRealLeadTimeChartJson(weekly));
         return result;
     }
 
@@ -104,13 +109,16 @@ public class DoraService {
             return List.of();
         }
 
+        Map<Long, String> projectNameById = trackedProjectRepository.findAllById(resolvedIds).stream()
+            .collect(Collectors.toMap(TrackedProject::getId, TrackedProject::getName));
+
         // Load all MRs that have a release attribution for these projects
         List<Long> tagIds = tags.stream().map(ReleaseTag::getId).toList();
         List<MergeRequest> allAttributedMrs = mergeRequestRepository
             .findOpenByProjectIds(resolvedIds, MrState.MERGED)
             .stream()
             .filter(mr -> mr.getReleaseTagId() != null && tagIds.contains(mr.getReleaseTagId()))
-            .collect(Collectors.toList());
+            .toList();
 
         Map<Long, List<MergeRequest>> mrsByTag = allAttributedMrs.stream()
             .collect(Collectors.groupingBy(MergeRequest::getReleaseTagId));
@@ -118,57 +126,63 @@ public class DoraService {
         List<ReleaseRowDto> rows = new ArrayList<>();
         for (ReleaseTag tag : tags) {
             List<MergeRequest> tagMrs = mrsByTag.getOrDefault(tag.getId(), List.of());
-
-            Double medianLeadTimeDays = null;
-            if (tag.getProdDeployedAt() != null && !tagMrs.isEmpty()) {
-                medianLeadTimeDays = tagMrs.stream()
-                    .filter(mr -> mr.getCreatedAtGitlab() != null)
-                    .mapToDouble(mr -> {
-                        long seconds = tag.getProdDeployedAt().getEpochSecond()
-                            - mr.getCreatedAtGitlab().getEpochSecond();
-                        return Math.round((seconds / 3600.0 / 24.0) * 10.0) / 10.0;
-                    })
-                    .sorted()
-                    .skip(tagMrs.size() / 2)
-                    .limit(1)
-                    .boxed()
-                    .findFirst()
-                    .orElse(null);
-            }
-
-            List<MrRowDto> mrRows = tagMrs.stream()
-                .sorted((a, b) -> {
-                    if (a.getMergedAtGitlab() == null) {
-                        return 1;
-                    }
-                    if (b.getMergedAtGitlab() == null) {
-                        return -1;
-                    }
-                    return b.getMergedAtGitlab().compareTo(a.getMergedAtGitlab());
-                })
-                .map(mr -> new MrRowDto(
-                    mr.getGitlabMrIid(),
-                    mr.getTitle(),
-                    mr.getWebUrl(),
-                    mr.getAuthorName(),
-                    mr.getMergedAtGitlab() != null
-                        ? "merged " + DATE_FMT.format(mr.getMergedAtGitlab())
-                        : null))
-                .toList();
-
             rows.add(new ReleaseRowDto(
                 tag.getId(),
                 tag.getTagName(),
+                projectNameById.getOrDefault(tag.getTrackedProjectId(), "—"),
                 DATE_FMT.format(tag.getTagCreatedAt()),
                 tag.getProdDeployedAt() != null
                     ? DATETIME_FMT.format(tag.getProdDeployedAt())
                     : null,
                 tagMrs.size(),
-                medianLeadTimeDays,
-                mrRows
+                computeMedianLeadTimeDays(tag, tagMrs),
+                buildMrRows(tagMrs)
             ));
         }
         return rows;
+    }
+
+    private Double computeMedianLeadTimeDays(ReleaseTag tag,
+                                             List<MergeRequest> tagMrs) {
+        if (tag.getProdDeployedAt() == null || tagMrs.isEmpty()) {
+            return null;
+        }
+        List<Double> sorted = tagMrs.stream()
+            .filter(mr -> mr.getCreatedAtGitlab() != null)
+            .mapToDouble(mr -> {
+                long seconds = tag.getProdDeployedAt().getEpochSecond()
+                    - mr.getCreatedAtGitlab().getEpochSecond();
+                return Math.round(seconds / 3600.0 / 24.0 * 10.0) / 10.0;
+            })
+            .sorted()
+            .boxed()
+            .toList();
+        if (sorted.isEmpty()) {
+            return null;
+        }
+        return sorted.get(sorted.size() / 2);
+    }
+
+    private List<MrRowDto> buildMrRows(List<MergeRequest> tagMrs) {
+        return tagMrs.stream()
+            .sorted((a, b) -> {
+                if (a.getMergedAtGitlab() == null) {
+                    return 1;
+                }
+                if (b.getMergedAtGitlab() == null) {
+                    return -1;
+                }
+                return b.getMergedAtGitlab().compareTo(a.getMergedAtGitlab());
+            })
+            .map(mr -> new MrRowDto(
+                mr.getGitlabMrIid(),
+                mr.getTitle(),
+                mr.getWebUrl(),
+                mr.getAuthorName(),
+                mr.getMergedAtGitlab() != null
+                    ? "merged " + DATE_FMT.format(mr.getMergedAtGitlab())
+                    : null))
+            .toList();
     }
 
     private List<Long> resolveProjectIds(List<Long> requested) {
@@ -180,22 +194,22 @@ public class DoraService {
             .toList();
     }
 
-    private String buildChartJson(List<LeadTimeWeekProjection> rows) {
+    private String buildRealLeadTimeChartJson(List<RealLeadTimeWeekProjection> rows) {
         List<String> labels = new ArrayList<>();
         List<Double> medians = new ArrayList<>();
         List<Double> p75s = new ArrayList<>();
 
-        for (LeadTimeWeekProjection row : rows) {
+        for (RealLeadTimeWeekProjection row : rows) {
             labels.add(row.getPeriod().toString());
-            medians.add(round(row.getMedianHours()));
-            p75s.add(round(row.getP75Hours()));
+            medians.add(round(row.getMedianDays()));
+            p75s.add(round(row.getP75Days()));
         }
 
         Map<String, Object> chart = Map.of(
             "labels", labels,
             "datasets", List.of(
                 Map.of(
-                    "label", "Медиана (ч)",
+                    "label", "Медиана (дн)",
                     "data", medians,
                     "borderColor", "#f59e0b",
                     "backgroundColor", "rgba(245,158,11,0.08)",
@@ -204,7 +218,7 @@ public class DoraService {
                     "pointRadius", 3
                 ),
                 Map.of(
-                    "label", "P75 (ч)",
+                    "label", "P75 (дн)",
                     "data", p75s,
                     "borderColor", "#94a3b8",
                     "backgroundColor", "transparent",
@@ -218,7 +232,7 @@ public class DoraService {
         try {
             return objectMapper.writeValueAsString(chart);
         } catch (JsonProcessingException e) {
-            log.warn("Failed to serialize DORA chart data", e);
+            log.warn("Ошибка сериализации данных DORA-графика", e);
             return "{}";
         }
     }
@@ -226,12 +240,14 @@ public class DoraService {
     public record ReleaseRowDto(
         Long id,
         String tagName,
+        String projectName,
         String tagCreatedAtDisplay,
         String prodDeployedAtDisplay,
         int mrCount,
         Double medianLeadTimeDays,
         List<MrRowDto> mrs
     ) {
+
     }
 
     public record MrRowDto(
@@ -241,5 +257,6 @@ public class DoraService {
         String authorName,
         String mergedAtDisplay
     ) {
+
     }
 }
